--- a/regizai/public/css/styleProfile.css
+++ b/regizai/public/css/styleProfile.css
@@ -12,8 +12,11 @@ html, body {
 
 .group-1{
     display: flex;
-    margin-top: 15%;
-    width: 70vh;
+    margin-top: 6%;
+    width: 80vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .titik-tiga{
@@ -35,4 +38,13 @@ html, body {
 
 .group-2{
     margin-top: 10%;
+}
+
+.kembali {
+    margin-top: 17%;
+}
+
+.kembali .fas {
+    color: black;
+    font-size: 20pt;
 }
