--- a/regizai/public/css/styleCalculate.css
+++ b/regizai/public/css/styleCalculate.css
@@ -3,30 +3,59 @@ body{
     width: 100%;
     font-family: 'Poppins';
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-}
-.center-content {
-    height: 20%;
-    justify-content: center;
-    align-items: center;
+    background: 
+        url('../img/left.png') no-repeat,
+        url('../img/right.png') no-repeat
+    ;
+    background-size: cover;
 }
 
 .header {
+    margin-top: 3vh;
     text-align: center;
     white-space: nowrap;
 
 }
 
 .area-form {
-    width: 5vh;
+    margin-top: 5vh;
     height: 10vh;
 }
 
 .container {
     display: flex;
-    align-items: center;
     justify-content: center;
-    margin: auto;
+}
+
+.input-group {
+    display: flex;
+}
+
+.kg {
+    width: 65px;
+}
+
+.kg input {
+    border-radius: 0 5px 5px 0;
+}
+
+.area-input {
+    width: 70vh;
+}
+
+.btn-primary {
+    margin-top: 5vh;
+    width: 20vh;
+    background-color: #734597 !important;
+    border-color: #734597 !important;
+}
+
+.btn-outline-secondary {
+    width: 8vh;
+}
+
+.back {
+    font-size: 25pt;
+    margin-left: 10vh;
+    margin-top: 10vh;
 }
