--- a/regizai/public/css/styleCatatan.css
+++ b/regizai/public/css/styleCatatan.css
@@ -1,4 +1,11 @@
 body{
+    background-image: url( "../img/catatan-bg.png") ;
+    background-size: 100% 100vh;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    background-repeat: no-repeat;
+
     height: 100vh;
     width: 100%;
     font-family: 'Poppins';
@@ -6,7 +13,7 @@ body{
 }
 
 .wraph{
-    margin-top: 10vh;
+    margin-top: 20vh;
 }
 
 .keseluruhan {
