--- a/regizai/public/css/styleProfile.css
+++ b/regizai/public/css/styleProfile.css
@@ -22,7 +22,7 @@ html, body {
 .titik-tiga{
     font-size: 20pt;
     margin-top: 15%;
-
+    color: black;
 }
 
 .nama-profile{
@@ -66,5 +66,3 @@ html, body {
     margin-top: 2%;
     margin-left: 3%;
 }
-
-
